improved security of user accounts
